--- a/index.html
+++ b/index.html
@@ -19,38 +19,33 @@
 			<ul class="wrapper nav clearfix">
 				<li class="nav-item">
 					<a href="index.html">
-						我的首页
+						Home
 						<span>HOME</span>
 					</a>
 				</li>
 				<li class="nav-item">
 					<a href="introduce.html">
-						我的简介
-						<span>INTRODUCTION</span>
+						Introduction
+						<span>MYSELF</span>
 					</a>
 				</li>
 				<li class="nav-item">
 					<a href="works.html">
-						拍摄作品
-						<span>PHOTO SHOOTING</span>
+						Works
+						<span>AT PRESENT</span>
 					</a>
 				</li>
-				<li class="nav-item">
-					<a href="works.html">
-						我的相册
-						<span>PHOTO SHOOTING</span>
-					</a>
-				</li>
+
 				<li class="nav-item">
 					<a href="achievement.html">
-						我的成就
+						Projects
 						<span>ACHIEVEMENT</span>
 					</a>
 				</li>
 				<li class="nav-item">
 					<a href="news.html">
-						艺术资讯
-						<span>INFORMATION</span>
+						Contract
+						<span>E-mail</span>
 					</a>
 				</li>
 			</ul>
