--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="author" content="order by dede58.com/" />
 		<meta name="Description" content=""/>
 		<meta name="Keywords" content=""/>
-		<title>个人网站 | 首页</title>
+		<title>Cheng Ge homepage</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 		<link rel="stylesheet" type="text/css" href="css/page.css"/>
 	</head>
@@ -12,8 +12,7 @@
 		<div class="header">
 			<div class="logo wrapper">
 				<a href="">
-					<h1>XXX个人网站</h1>
-					<p>XXX</p>
+					<h1>Homepage</h1>
 				</a>
 			</div>
 			<ul class="wrapper nav clearfix">
