--- a/interesting.html
+++ b/interesting.html
@@ -3,7 +3,7 @@
 	<head>	<meta charset="utf-8" />
         <meta name="author" content="order by dede58.com/" /<meta name="Description" content=""/>
 		<meta name="Keywords" content=""/>
-		<title>个人网站 | 艺术资讯</title>
+		<title>Cheng Ge homepage</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 		<link rel="stylesheet" type="text/css" href="css/page.css"/>
 	</head>
@@ -11,39 +11,39 @@
 		<div class="header">
 			<div class="logo wrapper">
 				<a href="">
-					<h1>XXX个人网站</h1>
-					<p>XXX</p>
+					<h1>Homepage</h1>
 				</a>
 			</div>
 			<ul class="wrapper nav clearfix">
 				<li class="nav-item">
 					<a href="index.html">
-						我的首页
+						Home
 						<span>HOME</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="introduce.html">
-						我的简介
-						<span>INTRODUCTION</span>
+					<a href="interesting.html">
+						Interesting
+						<span>MYSELF</span>
 					</a>
 				</li>
 				<li class="nav-item">
 					<a href="works.html">
-						拍摄作品
-						<span>PHOTO SHOOTING</span>
+						Works
+						<span>AT PRESENT</span>
 					</a>
 				</li>
+
 				<li class="nav-item">
 					<a href="achievement.html">
-						我的成就
+						Projects
 						<span>ACHIEVEMENT</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="news.html">
-						艺术资讯
-						<span>INFORMATION</span>
+					<a href="contract.html">
+						Contract
+						<span>E-mail</span>
 					</a>
 				</li>
 			</ul>
@@ -57,32 +57,31 @@
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
-				<li><a href="">我的首页</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">艺术资讯</a></li>
+				<li><a href="">Interesting</a></li>
 			</ul>
 		</div>
 		
-		<!--艺术资讯-->
+		<!--Interesting-->
 		<div class="information">
 			<div class="wrapper">
 				<div class="title">
 					<div class="common-title">
-						<h2>艺术资讯</h2>
+						<h2>Interesting</h2>
 						<span>INFORMATION</span>
 					</div>
-					<p>现任山东唐人文化传播有限公司董事长</p>
+					<p>I love learning.</p>
 				</div>
 				<div class="news-list clearfix">
 					<ul class="news-content clearfix">
 						<li class="clearfix">
 							<a href="news.detail.html">
 								<div class="info-time">
-									<p class="info-time-date">05/12</p>
-									<p class="info-time-year">2017</p>
+									<p class="info-time-date">03/13</p>
+									<p class="info-time-year">2023</p>
 								</div>
 								<div class="info-txt">
-									<h3>不断刷新面貌中强化自我而走向成熟</h3>
-									<p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令，细听流水...</p>
+									<h3>Sliding mode control theory</h3>
+									<p>123</p>
 								</div>
 							</a>
 						</li>
@@ -93,8 +92,8 @@
 									<p class="info-time-year">2017</p>
 								</div>
 								<div class="info-txt">
-									<h3>不断刷新面貌中强化自我而走向成熟</h3>
-									<p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令，细听流水...</p>
+									<h3>Adaptive dynamic programming</h3>
+									<p>456</p>
 								</div>
 							</a>
 						</li>
@@ -105,8 +104,8 @@
 									<p class="info-time-year">2017</p>
 								</div>
 								<div class="info-txt">
-									<h3>不断刷新面貌中强化自我而走向成熟</h3>
-									<p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令，p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令细听流水...</p>
+									<h3>Fixed-time stability control theory</h3>
+									<p>789</p>
 								</div>
 							</a>
 						</li>
@@ -117,8 +116,8 @@
 									<p class="info-time-year">2017</p>
 								</div>
 								<div class="info-txt">
-									<h3>不断刷新面貌中强化自我而走向成熟</h3>
-									<p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令，细听流水...</p>
+									<h3>Mobile robot</h3>
+									<p>123</p>
 								</div>
 							</a>
 						</li>
@@ -129,8 +128,8 @@
 									<p class="info-time-year">2017</p>
 								</div>
 								<div class="info-txt">
-									<h3>不断刷新面貌中强化自我而走向成熟</h3>
-									<p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令，细听流水...</p>
+									<h3>Quadrotor UAV</h3>
+									<p>123</p>
 								</div>
 							</a>
 						</li>
@@ -141,8 +140,8 @@
 									<p class="info-time-year">2017</p>
 								</div>
 								<div class="info-txt">
-									<h3>不断刷新面貌中强化自我而走向成熟</h3>
-									<p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令，p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令p>崔老师笔下的人物优雅而恬静，境韵悠长；百态横生，神态自若，各得其中；仕女清丽文秀，脉脉含情；童子情趣盎然，天真无邪；高仕闲情逸致，煮茶行令细听流水...</p>
+									<h3>Distributed formation control</h3>
+									<p>123</p>
 								</div>
 							</a>
 						</li>
@@ -154,18 +153,9 @@
 			</div>
 		</div>
 		
-		<div class="footer">
+				<div class="footer">
 			<div class="wrapper">
-				<div class="friend-link">
-					<a href="index.html">我的首页</a>
-					<a href="introduce.html">我的简介</a>
-					<a href="works.html">拍摄作品</a>
-					<a href="achievement.html">我的成就</a>
-					<a href="news.html">艺术资讯</a>                                 
-				</div>
-				<p class="copyright">版权所有：XXX个人网站 Copyright ©2020     后台管理
-</p>
-				<p class="support"><a href="">技术支持：XXX</a></p>
+				<p class="copyright">&copy; 2023. By Cheng Ge.</p>
 			</div>
 		</div>
 		
