--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="introduce.html">
-						Introduction
+					<a href="interesting.html">
+						interests
 						<span>MYSELF</span>
 					</a>
 				</li>
