--- a/interesting.html
+++ b/interesting.html
@@ -23,7 +23,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="interesting.html">
-						Interesting
+						interests
 						<span>MYSELF</span>
 					</a>
 				</li>
@@ -57,7 +57,7 @@
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
-				<li><a href="">Interesting</a></li>
+				<li><a href="">Interests</a></li>
 			</ul>
 		</div>
 		
@@ -66,7 +66,7 @@
 			<div class="wrapper">
 				<div class="title">
 					<div class="common-title">
-						<h2>Interesting</h2>
+						<h2>Interests</h2>
 						<span>INFORMATION</span>
 					</div>
 					<p>I love learning.</p>
