--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 			</div>
 		</div>
 		
+		<div class="page-banner">
+			<img src="img/works-banner.jpg" alt=""/>
+		</div>
 		
 		<div class="footer">
 			<div class="wrapper">
