--- a/works.html
+++ b/works.html
@@ -3,7 +3,7 @@
 	<head>	<meta charset="utf-8" />
         <meta name="author" content="order by dede58.com/" /<meta name="Description" content=""/>
 		<meta name="Keywords" content=""/>
-		<title>个人网站 | 拍摄作品</title>
+		<title>Cheng Ge homepage</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 		<link rel="stylesheet" type="text/css" href="css/page.css"/>
 	</head>
@@ -11,39 +11,39 @@
 		<div class="header">
 			<div class="logo wrapper">
 				<a href="">
-					<h1>XXX个人网站</h1>
-					<p>XXX</p>
+					<h1>Homepage</h1>
 				</a>
 			</div>
 			<ul class="wrapper nav clearfix">
 				<li class="nav-item">
 					<a href="index.html">
-						我的首页
+						Home
 						<span>HOME</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="introduce.html">
-						我的简介
-						<span>INTRODUCTION</span>
+					<a href="interesting.html">
+						interests
+						<span>MYSELF</span>
 					</a>
 				</li>
 				<li class="nav-item">
 					<a href="works.html">
-						拍摄作品
-						<span>PHOTO SHOOTING</span>
+						Works
+						<span>AT PRESENT</span>
 					</a>
 				</li>
+
 				<li class="nav-item">
 					<a href="achievement.html">
-						我的成就
+						Projects
 						<span>ACHIEVEMENT</span>
 					</a>
 				</li>
 				<li class="nav-item">
 					<a href="news.html">
-						艺术资讯
-						<span>INFORMATION</span>
+						Contract
+						<span>E-mail</span>
 					</a>
 				</li>
 			</ul>
@@ -57,8 +57,8 @@
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
-				<li><a href="">我的首页</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">拍摄作品</a></li>
+				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">Works</a></li>
 			</ul>
 		</div>
 		
@@ -67,10 +67,10 @@
 			<div class="wrapper">
 				<div class="title">
 					<div class="common-title">
-						<h2>拍摄作品</h2>
-						<span>PHOTO SHOOTING</span>
+						<h2>Works</h2>
+						<span>STUDY</span>
 					</div>
-					<p>电视连续剧《燕子李三》《大观园》《韩复榘》《国家力量》等...</p>
+					<p>no</p>
 				</div>
 				<ul class="works-list clearfix">
 					<li class="work-item">
@@ -78,7 +78,7 @@
 							<div class="work-item-pic">
 								<img src="img/index-banner.jpg" alt=""/>
 							</div>
-							<p>《燕子李三》</p>
+							<p>Attitude control problem of quadrotor UAV</p>
 						</a>
 					</li>
 					<li class="work-item">
@@ -86,7 +86,7 @@
 							<div class="work-item-pic">
 								<img src="img/index-banner.jpg" alt=""/>
 							</div>
-							<p>《燕子李三》</p>
+							<p>Trajectory tracking control of mobile robot</p>
 						</a>
 					</li>
 					<li class="work-item">
@@ -94,7 +94,7 @@
 							<div class="work-item-pic">
 								<img src="img/index-banner.jpg" alt=""/>
 							</div>
-							<p>《燕子李三》</p>
+							<p>Intelligent control of a car-like vehicle</p>
 						</a>
 					</li>
 					<li class="work-item">
@@ -102,15 +102,7 @@
 							<div class="work-item-pic">
 								<img src="img/index-banner.jpg" alt=""/>
 							</div>
-							<p>《燕子李三》</p>
-						</a>
-					</li>
-					<li class="work-item">
-						<a href="news.detail.html">
-							<div class="work-item-pic">
-								<img src="img/1.jpg" alt=""/>
-							</div>
-							<p>《燕子李三》</p>
+							<p>Distributed formation control of multiple mobile robots</p>
 						</a>
 					</li>
 					<li class="work-item">
@@ -118,28 +110,20 @@
 							<div class="work-item-pic">
 								<img src="img/index-banner.jpg" alt=""/>
 							</div>
-							<p>《燕子李三》</p>
+							<p>Multi-agent event-triggered formation control</p>
 						</a>
 					</li>
+
 				</ul>
 				<div class="more-btn">
-					<a href="">查看更多</a>
+					<a href="">More</a>
 				</div>
 			</div>
 		</div>
 		
 		<div class="footer">
 			<div class="wrapper">
-				<div class="friend-link">
-					<a href="index.html">我的首页</a>
-					<a href="introduce.html">我的简介</a>
-					<a href="works.html">拍摄作品</a>
-					<a href="achievement.html">我的成就</a>
-					<a href="news.html">艺术资讯</a>                                 
-				</div>
-				<p class="copyright">版权所有：XXX个人网站 Copyright ©2020     后台管理
-</p>
-				<p class="support"><a href="">技术支持：XXX</a></p>
+				<p class="copyright">&copy; 2023. By Cheng Ge.</p>
 			</div>
 		</div>
 		
