--- a/interesting.html
+++ b/interesting.html
@@ -73,6 +73,9 @@
 				</div>
 				<div class="news-list clearfix">
 					<ul class="news-content clearfix">
+					<div class="infor-left">
+						<img src="img/news-pic1.jpg" alt=""/>
+					</div>
 						<li class="clearfix">
 							<a href="news.detail.html">
 								<div class="info-time">
@@ -109,6 +112,9 @@
 								</div>
 							</a>
 						</li>
+					<div class="infor-left">
+					<img src="img/news-pic1.jpg" alt=""/>
+					</div>
 						<li class="clearfix">
 							<a href="news.detail.html">
 								<div class="info-time">
