--- a/achievement.html
+++ b/achievement.html
@@ -3,7 +3,7 @@
 	<head>	<meta charset="utf-8" />
         <meta name="author" content="order by dede58.com/" /<meta name="Description" content=""/>
 		<meta name="Keywords" content=""/>
-		<title>个人网站 | 艺术成就</title>
+		<title>Cheng Ge homepage</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 		<link rel="stylesheet" type="text/css" href="css/page.css"/>
 	</head>
@@ -11,39 +11,39 @@
 		<div class="header">
 			<div class="logo wrapper">
 				<a href="">
-					<h1>XXX个人网站</h1>
-					<p>XXX</p>
+					<h1>Homepage</h1>
 				</a>
 			</div>
 			<ul class="wrapper nav clearfix">
 				<li class="nav-item">
 					<a href="index.html">
-						我的首页
+						Home
 						<span>HOME</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="introduce.html">
-						我的简介
-						<span>INTRODUCTION</span>
+					<a href="interesting.html">
+						interests
+						<span>MYSELF</span>
 					</a>
 				</li>
 				<li class="nav-item">
 					<a href="works.html">
-						拍摄作品
-						<span>PHOTO SHOOTING</span>
+						Works
+						<span>AT PRESENT</span>
 					</a>
 				</li>
+
 				<li class="nav-item">
 					<a href="achievement.html">
-						我的成就
-						<span>ACHIEVEMENT</span>
+						Projects
+						<span>COMPLETE</span>
 					</a>
 				</li>
 				<li class="nav-item">
 					<a href="news.html">
-						艺术资讯
-						<span>INFORMATION</span>
+						Contract
+						<span>E-mail</span>
 					</a>
 				</li>
 			</ul>
@@ -57,29 +57,63 @@
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
-				<li><a href="">我的首页</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">我的成就</a></li>
+				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">Projects</a></li>
 			</ul>
 		</div>
 		
-		<!--我的成就-->
+		<!--Projects-->
 		<div class="achievement">
 			<div class="wrapper">
 				<div class="title">
 					<div class="common-title">
-						<h2>我的成就</h2>
-						<span>ACHIEVEMENT</span>
+						<h2>Projects</h2>
+						<span>COMPLETE</span>
 					</div>
-					<p>现任山东唐人文化传播有限公司董事长</p>
+					<p>N</p>
 				</div>
-				<ul class="achievement-list clearfix">
-					<li><p>1978年，作为编导完成我区第一个电视广告 。</p></li>
-					<li><p>1979年6月独立创办全国第一张省级电视报《内蒙古电视报》，担任主编，发行人。</p></li>
-					<li><p>1979年中国开始有电视剧。这一年根据包头石拐矿区的真实事件，担任编剧创作了电视剧《离婚》。1980年拍摄完成，成为内蒙古电视台在中央台播出的第一部电视剧。</p></li>
-					<li><p>1981年为庆祝呼和浩特建城四百年，担任编导完成内蒙台首部大型纪录片《呼和浩特》，被中央电视台《祖国各地》栏目首选。</p></li>
-					<li><p>1982年担任编剧、导演拍摄完成电视小品集《三月里的春风》，成为中央台全国第一个文明礼貌月中的展播剧目。</p></li>
-					<li><p>1983年，担任编剧、导演完成电视剧《小土屋里的开拓者》获自治区首届萨日娜一等奖。</p></li>
-					<li><p>1983年，作为编导拍摄的专题片《左邻右舍》获全国首届电视专题节目一等奖。</p></li>
+					<ul class="works-list clearfix">
+					<li class="work-item">
+						<a href="news.detail.html">
+							<div class="work-item-pic">
+								<img src="img/index-banner.jpg" alt=""/>
+							</div>
+							<p>Attitude control problem of quadrotor UAV</p>
+						</a>
+					</li>
+					<li class="work-item">
+						<a href="news.detail.html">
+							<div class="work-item-pic">
+								<img src="img/index-banner.jpg" alt=""/>
+							</div>
+							<p>Trajectory tracking control of mobile robot</p>
+						</a>
+					</li>
+					<li class="work-item">
+						<a href="news.detail.html">
+							<div class="work-item-pic">
+								<img src="img/index-banner.jpg" alt=""/>
+							</div>
+							<p>Intelligent control of a car-like vehicle</p>
+						</a>
+					</li>
+					<li class="work-item">
+						<a href="news.detail.html">
+							<div class="work-item-pic">
+								<img src="img/index-banner.jpg" alt=""/>
+							</div>
+							<p>Distributed formation control of multiple mobile robots</p>
+						</a>
+					</li>
+					<li class="work-item">
+						<a href="news.detail.html">
+							<div class="work-item-pic">
+								<img src="img/index-banner.jpg" alt=""/>
+							</div>
+							<p>Multi-agent event-triggered formation control</p>
+						</a>
+					</li>
+
 				</ul>
 				<div class="more-btn">
 					<a href="">查看更多</a>
@@ -89,16 +123,7 @@
 		
 		<div class="footer">
 			<div class="wrapper">
-				<div class="friend-link">
-					<a href="index.html">我的首页</a>
-					<a href="introduce.html">我的简介</a>
-					<a href="works.html">拍摄作品</a>
-					<a href="achievement.html">我的成就</a>
-					<a href="news.html">艺术资讯</a>                                 
-				</div>
-				<p class="copyright">版权所有：XXX个人网站 Copyright ©2020     后台管理
-</p>
-				<p class="support"><a href="">技术支持：XXX</a></p>
+				<p class="copyright">&copy; 2023. By Cheng Ge.</p>
 			</div>
 		</div>
 		
