--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<li class="nav-item">
 					<a href="achievement.html">
 						Projects
-						<span>ACHIEVEMENT</span>
+						<span>COMPLETE</span>
 					</a>
 				</li>
 				<li class="nav-item">
