--- a/works.html
+++ b/works.html
@@ -72,49 +72,88 @@
 					</div>
 					<p>no</p>
 				</div>
-				<ul class="works-list clearfix">
-					<li class="work-item">
-						<a href="news.detail.html">
-							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
-							</div>
-							<p>Attitude control problem of quadrotor UAV</p>
-						</a>
-					</li>
-					<li class="work-item">
-						<a href="news.detail.html">
-							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
-							</div>
-							<p>Trajectory tracking control of mobile robot</p>
-						</a>
-					</li>
-					<li class="work-item">
-						<a href="news.detail.html">
-							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
-							</div>
-							<p>Intelligent control of a car-like vehicle</p>
-						</a>
-					</li>
-					<li class="work-item">
-						<a href="news.detail.html">
-							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
-							</div>
-							<p>Distributed formation control of multiple mobile robots</p>
-						</a>
-					</li>
-					<li class="work-item">
-						<a href="news.detail.html">
-							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
-							</div>
-							<p>Multi-agent event-triggered formation control</p>
-						</a>
-					</li>
-
-				</ul>
+					<div class="news-list clearfix">
+					<ul class="news-content clearfix">
+					<div class="infor-left">
+						<img src="img/news-pic1.jpg" alt=""/>
+					</div>
+						<li class="clearfix">
+							<a href="news.detail.html">
+								<div class="info-time">
+									<p class="info-time-date">03/13</p>
+									<p class="info-time-year">2023</p>
+								</div>
+								<div class="info-txt">
+									<h3>Sliding mode control theory</h3>
+									<p>123</p>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="news.detail.html">
+								<div class="info-time">
+									<p class="info-time-date">05/12</p>
+									<p class="info-time-year">2017</p>
+								</div>
+								<div class="info-txt">
+									<h3>Adaptive dynamic programming</h3>
+									<p>456</p>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="news.detail.html">
+								<div class="info-time">
+									<p class="info-time-date">05/12</p>
+									<p class="info-time-year">2017</p>
+								</div>
+								<div class="info-txt">
+									<h3>Fixed-time stability control theory</h3>
+									<p>789</p>
+								</div>
+							</a>
+						</li>
+					<div class="infor-left">
+					<img src="img/news-pic1.jpg" alt=""/>
+					</div>
+						<li class="clearfix">
+							<a href="news.detail.html">
+								<div class="info-time">
+									<p class="info-time-date">05/12</p>
+									<p class="info-time-year">2017</p>
+								</div>
+								<div class="info-txt">
+									<h3>Mobile robot</h3>
+									<p>123</p>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="news.detail.html">
+								<div class="info-time">
+									<p class="info-time-date">05/12</p>
+									<p class="info-time-year">2017</p>
+								</div>
+								<div class="info-txt">
+									<h3>Quadrotor UAV</h3>
+									<p>123</p>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="news.detail.html">
+								<div class="info-time">
+									<p class="info-time-date">05/12</p>
+									<p class="info-time-year">2017</p>
+								</div>
+								<div class="info-txt">
+									<h3>Distributed formation control</h3>
+									<p>123</p>
+								</div>
+							</a>
+						</li>
+					</ul>
+				</div>
 				<div class="more-btn">
 					<a href="">More</a>
 				</div>
