--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 					<h1>Homepage</h1>
 				</a>
 			</div>
+			<center>
 			<ul class="wrapper nav clearfix">
 				<li class="nav-item">
 					<a href="index.html">
@@ -48,6 +49,7 @@
 					</a>
 				</li>
 			</ul>
+			</center>
 		</div>
 		
 
