--- a/contract.html
+++ b/contract.html
@@ -62,23 +62,60 @@
 			</ul>
 		</div>
 		
-		<div class="intro">
-			<div class="wrapper clearfix">
-				<div class="intro-img">
-					<p><img src="img/intro-1.jpg" alt=""/></p>
+	<div class="wrapper wrapper-style4">
+		<article id="contact">
+			<header>
+				<h2>Want to hire me? Get in touch!</h2>
+				<span>Ornare nulla proin odio consequat  sapien vestibulum ipsum sed lorem.</span>
+			</header>
+			<div>
+				<div class="row">
+					<div class="12u">
+						<form method="post" action="#">
+							<div>
+								<div class="row half">
+									<div class="6u">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="6u">
+										<input type="text" name="email" id="email" placeholder="Email" />
+									</div>
+								</div>
+								<div class="row half">
+									<div class="12u">
+										<input type="text" name="subject" id="subject" placeholder="Subject" />
+									</div>
+								</div>
+								<div class="row half">
+									<div class="12u">
+										<textarea name="message" id="message" placeholder="Message"></textarea>
+									</div>
+								</div>
+								<div class="row">
+									<div class="12u">
+										<a href="#" class="button form-button-submit">Send Message</a>
+										<a href="#" class="button button-alt form-button-reset">Clear Form</a>
+									</div>
+								</div>
+							</div>
+						</form>
+					</div>
 				</div>
-				<div class="intro-txt">
-					<h3 style="font-size: 24px;">XXX</h3>
-					<p style="margin-top: 40px;">现任山东唐人文化传播有限公司董事长</p>
-					<p>山东省团购帮房车俱乐部有限公司董事长</p>
-					<p>山东团购帮商贸有限公司董事长</p>
-					<p style="margin:30px 0">作品</p>
-					<p>电视连续剧《燕子李三》《大观园》《韩复榘》《国家力量》
-电影《冒顿》《永恒的心愿》《天网狼蛛》《测谎师》《燕子李三》《大观园》《韩复榘》《国家力量》
-电影《冒顿》《永恒的心愿》《天网狼蛛》《测谎师》</p>
+				<div class="row row-special">
+					<div class="12u">
+						<h3>Find me on ...</h3>
+						<ul class="social">
+							<li class="twitter"><a href="" class="icon icon-twitter"><span>Twitter</span></a></li>
+							<li class="facebook"><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
+							<li class="dribbble"><a href="" class="icon icon-dribbble"><span>Dribbble</span></a></li>
+							<li class="linkedin"><a href="#" class="icon icon-linkedin"><span>LinkedIn</span></a></li>
+							<li class="tumblr"><a href="#" class="icon icon-tumblr"><span>Tumblr</span></a></li>
+							<li class="googleplus"><a href="#" class="icon icon-google-plus"><span>Google+</span></a></li>
+							<li class="github"><a href="" class="icon icon-github"><span>Github</span></a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
-		</div>
 		
 		<div class="footer">
 			<div class="wrapper">
