--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="news.html">
+					<a href="contract.html">
 						Contract
 						<span>E-mail</span>
 					</a>
