--- a/works.html
+++ b/works.html
@@ -41,7 +41,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="news.html">
+					<a href="contract.html">
 						Contract
 						<span>E-mail</span>
 					</a>
