--- a/contract.html
+++ b/contract.html
@@ -57,54 +57,18 @@
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
-				<li><a href="">Contract</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">CONTRACT</a></li>
+				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">Contract</a></li>
 			</ul>
 		</div>
 		
-	<div class="wrapper wrapper-style4">
-		<article id="contact">
-			<header>
-				<h2>Want to hire me? Get in touch!</h2>
-				<span>Ornare nulla proin odio consequat  sapien vestibulum ipsum sed lorem.</span>
-			</header>
-			<div>
-				<div class="row">
-					<div class="12u">
-						<form method="post" action="#">
-							<div>
-								<div class="row half">
-									<div class="6u">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="6u">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-								</div>
-								<div class="row half">
-									<div class="12u">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-									</div>
-								</div>
-								<div class="row half">
-									<div class="12u">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-								</div>
-								<div class="row">
-									<div class="12u">
-										<a href="#" class="button form-button-submit">Send Message</a>
-										<a href="#" class="button button-alt form-button-reset">Clear Form</a>
-									</div>
-								</div>
-							</div>
-						</form>
-					</div>
+			<div class="intro">
+			<div class="wrapper clearfix">
+				<div class="intro-img">
+					<p><img src="img/intro-1.jpg" alt=""/></p>
 				</div>
-				<div class="row row-special">
-					<div class="12u">
-						<h3>Find me on ...</h3>
-						<ul class="social">
+				<div class="intro-txt">
+					<h3 style="font-size: 24px;">XXX</h3>
 							<li class="twitter"><a href="" class="icon icon-twitter"><span>Twitter</span></a></li>
 							<li class="facebook"><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
 							<li class="dribbble"><a href="" class="icon icon-dribbble"><span>Dribbble</span></a></li>
@@ -112,10 +76,9 @@
 							<li class="tumblr"><a href="#" class="icon icon-tumblr"><span>Tumblr</span></a></li>
 							<li class="googleplus"><a href="#" class="icon icon-google-plus"><span>Google+</span></a></li>
 							<li class="github"><a href="" class="icon icon-github"><span>Github</span></a></li>
-						</ul>
-					</div>
-				</div>
+										</div>
 			</div>
+		</div>
 		
 		<div class="footer">
 			<div class="wrapper">
