--- a/contract.html
+++ b/contract.html
@@ -80,6 +80,10 @@
 			</div>
 		</div>
 		
+		<div class="page-banner">
+			<img src="img/works-banner.jpg" alt=""/>
+		</div>
+		
 		<div class="footer">
 			<div class="wrapper">
 				<p class="copyright">&copy; 2023. By Cheng Ge.</p>
