--- a/interesting.html
+++ b/interesting.html
@@ -57,6 +57,7 @@
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
+				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
 				<li><a href="">Interests</a></li>
 			</ul>
 		</div>
