--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="introduce">
 			<div class="wrapper">
 				<dl class="intro-pic">
-					<dt><img src="img/person-img.JPG" alt=""/></dt>
+					<dt><img src="img/person-img.jpeg" alt=""/></dt>
 					<dd>Cheng Ge</dd>
 				</dl>
 				<div class="intro-info">
