--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</a>
 			</div>
 			<center>
-			<ul class="wrapper nav clearfix">
+			<ul class="wrapper nav clearfix", style="padding-left:40px">
 				<li class="nav-item">
 					<a href="index.html">
 						Home
