--- a/achievement.html
+++ b/achievement.html
@@ -14,7 +14,7 @@
 					<h1>Homepage</h1>
 				</a>
 			</div>
-			<ul class="wrapper nav clearfix">
+			<ul class="wrapper nav clearfix", style="padding-left:120px">
 				<li class="nav-item">
 					<a href="index.html">
 						Home
