--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 			</center>
 		</div>
 		
-
+		<div class="page-banner">
+			<img src="img/beijing1.jpg" alt=""/>
+		</div>
 		
 		<!--简介-->
 		<div class="introduce">
