--- a/interesting.html
+++ b/interesting.html
@@ -75,10 +75,10 @@
 				<div class="news-list clearfix">
 					<ul class="news-content clearfix">
 						<li class="clearfix">
-							<a href="news.detail.html">
+							<a href="/interesting/MATLAB.html">
 								<div class="info-txt">
-									<h3>Sliding mode control theory</h3>
-									<p>123</p>
+									<h3>MATALB</h3>
+									<p>Some understanding and perception of MATLAB and simulink</p>
 								</div>
 							</a>
 						</li>
