--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -4,8 +4,8 @@
         <meta name="author" content="order by dede58.com/" /<meta name="Description" content=""/>
 		<meta name="Keywords" content=""/>
        		<title>Cheng Ge homepage</title> 
-		<link rel="stylesheet" type="text/css" href="css/common.css"/>
-		<link rel="stylesheet" type="text/css" href="css/page.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/common.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/page.css"/>
 	</head>
 	<body>
 		<div class="header">
