--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -16,32 +16,32 @@
 			</div>
 			<ul class="wrapper nav clearfix",style="padding-left:140px">
 				<li class="nav-item">
-					<a href="index.html">
+					<a href="/index.html">
 						Home
 						<span>HOME</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="interesting.html">
+					<a href="/interesting.html">
 						interests
 						<span>MYSELF</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="works.html">
+					<a href="/works.html">
 						Works
 						<span>AT PRESENT</span>
 					</a>
 				</li>
 
 				<li class="nav-item">
-					<a href="achievement.html">
+					<a href="/achievement.html">
 						Projects
 						<span>COMPLETE</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="contract.html">
+					<a href="/contract.html">
 						Contract
 						<span>E-mail</span>
 					</a>
@@ -51,7 +51,7 @@
 		
 		<!--头部图片-->
 		<div class="page-banner">
-			<img src="img/works-banner.jpg" alt=""/>
+			<img src="/img/works-banner.jpg" alt=""/>
 		</div>
 		
 		<!--面包屑导航-->
