--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -14,7 +14,7 @@
 					<h1>Homepage</h1>
 				</a>
 			</div>
-			<ul class="wrapper nav clearfix", style="padding-left:140px">
+			<ul class="wrapper nav clearfix", style="text-align: center">
 				<li class="nav-item">
 					<a href="/index.html">
 						Home
