--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -14,7 +14,7 @@
 					<h1>Homepage</h1>
 				</a>
 			</div>
-			<ul class="wrapper nav clearfix", style="text-align: center">
+			<ul class="wrapper nav clearfix", style="text-align: left; padding-left: 170px">
 				<li class="nav-item">
 					<a href="/index.html">
 						Home
@@ -82,10 +82,7 @@
 		</div>
 		
 		
-		<div class="page-banner">
-			<img src="/img/works-banner.jpg" alt=""/>
-		</div>
-		
+
 		
 		
 		<div class="footer">
