--- a/works.html
+++ b/works.html
@@ -14,7 +14,7 @@
 					<h1>Homepage</h1>
 				</a>
 			</div>
-			<ul class="wrapper nav clearfix", style="text-align: center">
+			<ul class="wrapper nav clearfix", style="text-align: left; padding-left: 170px">
 				<li class="nav-item">
 					<a href="index.html">
 						Home
