--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -82,7 +82,9 @@
 		</div>
 		
 		
-
+		<div class="page-banner">
+			<img src="/img/works-banner.jpg" alt=""/>
+		</div>
 		
 		
 		<div class="footer">
