--- a/interesting.html
+++ b/interesting.html
@@ -85,8 +85,8 @@
 						<li class="clearfix">
 							<a href="news.detail.html">
 								<div class="info-txt">
-									<h3>Adaptive dynamic programming</h3>
-									<p>456</p>
+									<h3>Python</h3>
+									<p>Library call and interface design</p>
 								</div>
 							</a>
 						</li>
@@ -94,8 +94,8 @@
 							<a href="news.detail.html">
 								
 								<div class="info-txt">
-									<h3>Fixed-time stability control theory</h3>
-									<p>789</p>
+									<h3>C++</h3>
+									<p>Object-oriented programming and generic programming</p>
 								</div>
 							</a>
 						</li>
