--- a/interesting.html
+++ b/interesting.html
@@ -78,7 +78,7 @@
 							<a href="/interesting/MATLAB.html">
 								<div class="info-txt">
 									<h3>MATALB</h3>
-									<p>Some understanding and perception of MATLAB and simulink</p>
+									<p>Some understanding of MATLAB and simulink</p>
 								</div>
 							</a>
 						</li>
