--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -73,7 +73,13 @@
 					</p>
 				</div>
 				<div class="news-detail-content">
-					<p style="margin-bottom: 15px;">1</p>
+					<p style="margin-bottom: 15px;">MATLAB is a high-performance computer language for scientific and technical computing. 
+						It combines computing,visualization programming functions in one easy-to-use environment. 
+						MATLAB is an interactive system (writing programs and executing commands are synchronized), 
+						and its basic data elements are arrays with no dimension limit. 
+						Therefore, using MATLAB to compile programs involving matrix and vector problems is better than using only scalar and non-interactive ones. 
+						Programming in C or FORTAN language is more convenient. 
+						The full name of MATLAB is Matrix Laboratory, which means Matrix Laboratory, which is a set of numerical calculation software launched by MathWorks in 1984.</p>
 					<p style="margin-bottom: 15px;">2</p>
 					<p><img src="img/changcheng.jpg" alt=""/></p>
 					
