--- a/works.html
+++ b/works.html
@@ -114,7 +114,7 @@
 							</a>
 						</li>
 					<div class="infor-left">
-					<img src="img/news-pic1.jpg" alt=""/>
+					<img src="img/laboratory.jpg" alt=""/>
 					</div>
 						<li class="clearfix">
 							<a href="news.detail.html">
