--- a/works.html
+++ b/works.html
@@ -75,7 +75,7 @@
 					<div class="news-list clearfix">
 					<ul class="news-content clearfix">
 					<div class="infor-left">
-						<img src="img/news-pic1.jpg" alt=""/>
+						<img src="img/xiton.jpg" alt=""/>
 					</div>
 						<li class="clearfix">
 							<a href="news.detail.html">
