--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<dd>Cheng Ge</dd>
 				</dl>
 				<div class="intro-info">
-					   <p style="text-align:justify">He is currently working toward the M.Eng. degree in logistics science and technology with Shanghai Maritime University,
+					   <p style="text-align:justify">ensp;He is currently working toward the M.Eng. degree in logistics science and technology with Shanghai Maritime University,
 						   Shanghai, China. His research interests include reinforcement learning-based control, finite-time control and distributed control of multi-agent systems. </p> 
 				</div>
 			</div>
