--- a/achievement.html
+++ b/achievement.html
@@ -78,7 +78,7 @@
 							<div class="work-item-pic">
 								<img src="img/index-banner.jpg" alt=""/>
 							</div>
-							<p>Attitude control problem of quadrotor UAV</p>
+							<p>Simulation of 3D UAV dynamic window approach</p>
 						</a>
 					</li>
 					<li class="work-item">
@@ -116,7 +116,7 @@
 
 				</ul>
 				<div class="more-btn">
-					<a href="">查看更多</a>
+					<a href="">More</a>
 				</div>
 			</div>
 		</div>
