--- a/interesting.html
+++ b/interesting.html
@@ -121,7 +121,7 @@
 					</ul>
 				</div>
 				<div class="more-btn">
-					<a href="">查看更多</a>
+					<a href="">More</a>
 				</div>
 			</div>
 		</div>
