--- a/achievement.html
+++ b/achievement.html
@@ -86,9 +86,17 @@
 							<div class="work-item-pic">
 								<img src="img/index-banner.jpg" alt=""/>
 							</div>
-							<p>Trajectory tracking control of mobile robot</p>
+							<p>Recognition and grasping experiment of robotic arm</p>
 						</a>
 					</li>
+					<li class="work-item">
+						<a href="news.detail.html">
+							<div class="work-item-pic">
+								<img src="img/index-banner.jpg" alt=""/>
+							</div>
+							<p>The combination test of reverse control method and dynamic programming method</p>
+						</a>
+					</li>						  
 					<li class="work-item">
 						<a href="news.detail.html">
 							<div class="work-item-pic">
