--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 					<dt><img src="img/dog.jpeg" alt=""/></dt>
 					<dd>Cheng Ge</dd>
 				</dl>
+				nbsp;nbsp;
 				<div class="intro-info">
-					   <p style="text-align:justify">nbsp;nbsp; He is currently working toward the M.Eng. degree in logistics science and technology with Shanghai Maritime University,
+					   <p style="text-align:justify">He is currently working toward the M.Eng. degree in logistics science and technology with Shanghai Maritime University,
 						   Shanghai, China. His research interests include reinforcement learning-based control, finite-time control and distributed control of multi-agent systems. </p> 
 				</div>
 			</div>
