--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				</dl>
 				nbsp;nbsp;
 				<div class="intro-info">
-					   <p style="text-align:justify">&ensp;He is currently working toward the M.Eng. degree in logistics science and technology with Shanghai Maritime University,
+					   <p style="text-align:justify">&ensp;&ensp;&ensp;&ensp;He is currently working toward the M.Eng. degree in logistics science and technology with Shanghai Maritime University,
 						   Shanghai, China. His research interests include reinforcement learning-based control, finite-time control and distributed control of multi-agent systems. </p> 
 				</div>
 			</div>
