--- a/works.html
+++ b/works.html
@@ -123,7 +123,7 @@
 									<p class="info-time-year">2017</p>
 								</div>
 								<div class="info-txt">
-									<h3>Mobile robot</h3>
+									<h3>Mobile robot and Quadrotor UAV</h3>
 									<p>123</p>
 								</div>
 							</a>
@@ -135,7 +135,7 @@
 									<p class="info-time-year">2017</p>
 								</div>
 								<div class="info-txt">
-									<h3>Quadrotor UAV</h3>
+									<h3>Path planning strategy</h3>
 									<p>123</p>
 								</div>
 							</a>
