--- a/interesting.html
+++ b/interesting.html
@@ -113,8 +113,8 @@
 							<a href="news.detail.html">
 								
 								<div class="info-txt">
-									<h3>Origin</h3>
-									<p>Professional drawing design</p>
+									<h3>Ubuntu</h3>
+									<p>Embedded design</p>
 								</div>
 							</a>
 						</li>
