--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			
 				<div class="intro-info">
 					   <p style="text-align:justify">&ensp;&ensp;&ensp;&ensp;He is currently working toward the M.Eng. degree in logistics science and technology with Shanghai Maritime University,
-						   Shanghai, China. His research interests include reinforcement learning-based control, finite-time control and distributed control of multi-agent systems. a </p> 
+						   Shanghai, China. His research interests include reinforcement learning-based control, finite-time control and distributed control of multi-agent systems.  </p> 
 				</div>
 			</div>
 		</div>
