--- a/achievement.html
+++ b/achievement.html
@@ -108,7 +108,7 @@
 					<li class="work-item">
 						<a href="news.detail.html">
 							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
+								<img src="img/muti-robots.jpg" alt=""/>
 							</div>
 							<p>Distributed formation control of multiple mobile robots</p>
 						</a>
