--- a/achievement.html
+++ b/achievement.html
@@ -106,7 +106,7 @@
 						</a>
 					</li>
 					<li class="work-item">
-						<a href="news.detail.html">
+						<a href="project/muti-robots.html">
 							<div class="work-item-pic">
 								<img src="img/muti-robots.jpg" alt=""/>
 							</div>
