--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="interesting.html">
-						interests
+						Interests
 						<span>MYSELF</span>
 					</a>
 				</li>
