--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -73,13 +73,21 @@
 					</p>
 				</div>
 				<div class="news-detail-content">
-					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;MATLAB is a high-performance computer language for scientific and technical computing. 
-						It combines computing,visualization programming functions in one easy-to-use environment. 
-						MATLAB is an interactive system (writing programs and executing commands are synchronized), 
-						and its basic data elements are arrays with no dimension limit. 
-						Therefore, using MATLAB to compile programs involving matrix and vector problems is better than using only scalar and non-interactive ones. 
-						Programming in C or FORTAN language is more convenient. 
-						The full name of MATLAB is Matrix Laboratory, which means Matrix Laboratory, which is a set of numerical calculation software launched by MathWorks in 1984.</p>
+					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;MATLAB is a high-level programming language and an interactive environment for numerical computation, visualization, and programming. Developed by MathWorks, MATLAB is widely used in engineering and scientific applications due to its powerful features, ease of use, and extensive toolboxes.
+
+					MATLAB's syntax is similar to that of other programming languages such as C++ and Java, making it easy for programmers to learn and use. It offers built-in support for matrix operations, which makes it ideal for scientific computing. MATLAB also has a large number of toolkits and add-ons that allow users to create custom functionality for specific applications.
+
+					In addition to its core numerical capabilities, MATLAB includes a variety of graphical tools for data visualization, such as plotting, 3D visualization, and image processing. MATLAB's graphics tools can be customized to create publication-quality graphics and animations.
+
+					MATLAB also includes features for parallel computing, which allows users to distribute computations across multiple processors and cores. This feature enables users to solve larger problems in less time by taking advantage of the power of multiprocessing systems.
+
+					Furthermore, MATLAB has a wide range of toolbox options available for specialized applications such as optimization, control system design, signal and image processing, machine learning, deep learning, and more. These options provide users with access to sophisticated algorithms designed for specific applications.
+
+					MATLAB also supports integration with other programming languages, including C, C++, and Fortran. This lets MATLAB users take advantage of existing code libraries written in these languages or to interface with hardware devices.
+
+					One of the standout features of MATLAB is its active user community, which provides a wealth of resources for new and experienced users alike. The MATLAB Central File Exchange allows users to share code and collaborate on projects. Additionally, MATLAB's documentation, online support forums, and webinars help users get up to speed on the language and stay informed about new developments in the field.
+
+					Overall, MATLAB is a powerful tool for scientific computing, with a vast array of features and toolboxes for a variety of applications. Its ease of use, robust graphics tools, and integration with other languages make it a top choice for researchers, engineers, and businesses across multiple industries.</p>
 					<p style="margin-bottom: 15px;">2</p>
 					<p><img src="img/changcheng.jpg" alt=""/></p>
 					
