--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -66,11 +66,13 @@
 		<!--MATLAB-->
 		<div class="news-detail">
 			<div class="wrapper">
-				<div class="infor-left">
-					<center>
-					<img src="img/matlab.png" alt=""/>
-					<\center>
-				</div>
+				</br>
+				<div>
+				<center>
+				<img src="img/matlab.png" alt=""/>
+				<\center>
+				<div>
+				</br>
 				<div class="news-title">
 					<h2>Learning and perception of MATLAB</h2>
 					<p>
