--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -69,8 +69,8 @@
 				</br>
 				<div>
 				<center>
-				<img src="img/matlab.jpg" alt=""/ width="1280" height="720">
-				<\center>
+				<img src="img/matlab.jpg" alt=""/ width="800" height="400">
+				</center>
 				<div>
 				</br>
 				<div class="news-title">
