--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -69,7 +69,7 @@
 				</br>
 				<div>
 				<center>
-				<img src="img/matlab.jpg" alt=""/ width="800" height="400">
+				<img src="img/matlab.jpg" alt="" width="800" height="400"/>
 				</center>
 				<div>
 				</br>
