--- a/project/muti-robots.html
+++ b/project/muti-robots.html
@@ -74,10 +74,12 @@
 				</div>
 				<div class="news-detail-content">
 				  	<body>
+					<center>
         				<video src="/video/Drop_line.mp4" 
                				controls 
-               				width="1280" 
-              				height="720" ></video>
+               				width="768" 
+              				height="432" ></video>
+					</center>
      					</body>
 					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;1</p>
 					<p style="margin-bottom: 15px;">2</p>
