--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -95,7 +95,7 @@
 					One of the standout features of MATLAB is its active user community, which provides a wealth of resources for new and experienced users alike. The MATLAB Central File Exchange allows users to share code and collaborate on projects. Additionally, MATLAB's documentation, online support forums, and webinars help users get up to speed on the language and stay informed about new developments in the field.
 
 					Overall, MATLAB is a powerful tool for scientific computing, with a vast array of features and toolboxes for a variety of applications. Its ease of use, robust graphics tools, and integration with other languages make it a top choice for researchers, engineers, and businesses across multiple industries.</p>
-					<p style="margin-bottom: 15px;">2</p>
+					<p style="margin-bottom: 15px;"></p>
 					<p><img src="img/changcheng.jpg" alt=""/></p>
 					
 			</div>
