--- a/contract.html
+++ b/contract.html
@@ -68,8 +68,8 @@
 					<p><img src="img/intro-1.jpg" alt=""/></p>
 				</div>
 				<div class="intro-txt">
-					<h3 style="font-size: 24px;">XXX</h3>
-							<li class="twitter"><a href="" class="icon icon-twitter"><span>Twitter</span></a></li>
+					<h3 style="font-size: 24px;">葛成(Cheng Ge)</h3>
+							<li class="twitter"><a href="https://mail.163.com/" class="icon icon-twitter"><span>163 mail:&nbsp gecheng_std@163.com</span></a></li>
 							<li class="facebook"><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
 							<li class="dribbble"><a href="" class="icon icon-dribbble"><span>Dribbble</span></a></li>
 							<li class="linkedin"><a href="#" class="icon icon-linkedin"><span>LinkedIn</span></a></li>
