--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -77,7 +77,7 @@
 				<center>
 				<img src="/img/matlab.jpg" alt="" width="800" height="400"/>
 				</center>
-				<div>
+				</div>
 				</br>
 				<div class="news-detail-content">
 					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;MATLAB is a high-level programming language and an interactive environment for numerical computation, visualization, and programming. Developed by MathWorks, MATLAB is widely used in engineering and scientific applications due to its powerful features, ease of use, and extensive toolboxes.
