--- a/interesting/MATLAB.html
+++ b/interesting/MATLAB.html
@@ -49,9 +49,10 @@
 			</ul>
 		</div>
 		
+	
 		<!--头部图片-->
 		<div class="page-banner">
-			<img src="/img/works-banner.jpg" alt=""/>
+			<img src="img/beijing2.jpg" alt=""/>
 		</div>
 		
 		<!--面包屑导航-->
