--- a/achievement.html
+++ b/achievement.html
@@ -120,8 +120,15 @@
 							</div>
 							<p>Multi-agent event-triggered formation control</p>
 						</a>
+					</li>	
+					<li class="work-item">
+						<a href="news.detail.html">
+							<div class="work-item-pic">
+								<img src="/img/Show pictures/drop.jpg" alt=""/>
+							</div>
+							<p>Coordinated tracking and landing by UAV and UGV</p>
+						</a>
 					</li>
-
 				</ul>
 				<div class="more-btn">
 					<a href="">More</a>
