--- a/achievement.html
+++ b/achievement.html
@@ -76,7 +76,7 @@
 					<li class="work-item">
 						<a href="news.detail.html">
 							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
+								<img src="/img/Show pictures/3dplan.jpg" alt=""/>
 							</div>
 							<p>Simulation of 3D UAV dynamic window approach</p>
 						</a>
@@ -84,7 +84,7 @@
 					<li class="work-item">
 						<a href="news.detail.html">
 							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
+								<img src="/img/Show pictures/qarm.jpg" alt=""/>
 							</div>
 							<p>Recognition and grasping experiment of robotic arm</p>
 						</a>
