--- a/achievement.html
+++ b/achievement.html
@@ -92,7 +92,7 @@
 					<li class="work-item">
 						<a href="news.detail.html">
 							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
+								<img src="/img/Show pictures/plan_control.jpg" alt=""/>
 							</div>
 							<p>The combination test of reverse control method and dynamic programming method</p>
 						</a>
@@ -116,7 +116,7 @@
 					<li class="work-item">
 						<a href="news.detail.html">
 							<div class="work-item-pic">
-								<img src="img/index-banner.jpg" alt=""/>
+								<img src="/img/Show pictures/switch.jpg" alt=""/>
 							</div>
 							<p>Multi-agent event-triggered formation control</p>
 						</a>
