--- a/achievement.html
+++ b/achievement.html
@@ -129,6 +129,22 @@
 							<p>Coordinated tracking and landing by UAV and UGV</p>
 						</a>
 					</li>
+					<li class="work-item">
+						<a href="news.detail.html">
+							<div class="work-item-pic">
+								<img src="/img/Show pictures/drop.jpg" alt=""/>
+							</div>
+							<p>Distributed multi-quadrotors system formation control</p>
+						</a>
+					</li>
+					<li class="work-item">
+						<a href="news.detail.html">
+							<div class="work-item-pic">
+								<img src="/img/Show pictures/drop.jpg" alt=""/>
+							</div>
+							<p>Optimal planning and robust control of quayside Bridges</p>
+						</a>
+					</li>	
 				</ul>
 				<div class="more-btn">
 					<a href="">More</a>
