--- a/achievement.html
+++ b/achievement.html
@@ -118,7 +118,7 @@
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/switch.jpg" alt=""/>
 							</div>
-							<p>Multi-agent event-triggered formation control</p>
+							<p>Multi-agents event-triggered formation control</p>
 						</a>
 					</li>	
 					<li class="work-item">
