--- a/achievement.html
+++ b/achievement.html
@@ -132,7 +132,7 @@
 					<li class="work-item">
 						<a href="news.detail.html">
 							<div class="work-item-pic">
-								<img src="/img/Show pictures/drop.jpg" alt=""/>
+								<img src="/img/Show pictures/x.jpg" alt=""/>
 							</div>
 							<p>Distributed multi-quadrotors system formation control</p>
 						</a>
@@ -140,7 +140,7 @@
 					<li class="work-item">
 						<a href="news.detail.html">
 							<div class="work-item-pic">
-								<img src="/img/Show pictures/drop.jpg" alt=""/>
+								<img src="/img/Show pictures/Bridges.jpg" alt=""/>
 							</div>
 							<p>Optimal planning and robust control of quayside Bridges</p>
 						</a>
