--- a/achievement.html
+++ b/achievement.html
@@ -142,7 +142,7 @@
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/Bridges.jpg" alt=""/>
 							</div>
-							<p>Optimal planning and robust control of quayside Bridges a</p>
+							<p>Optimal planning and robust control of quayside Bridges</p>
 						</a>
 					</li>	
 				</ul>
