--- a/achievement.html
+++ b/achievement.html
@@ -107,7 +107,7 @@
 						</a>
 					</li>
 					<li class="work-item">
-						<a href="project/muti-robots/muti-robots.html">
+						<a href="project/muti-robots.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/muti-robots.jpg" alt=""/>
 							</div>
