--- a/achievement.html
+++ b/achievement.html
@@ -74,7 +74,7 @@
 				</div>
 					<ul class="works-list clearfix">
 					<li class="work-item">
-						<a href="news.detail.html">
+						<a href="/project/3DDWA.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/3dplan.jpg" alt=""/>
 							</div>
@@ -82,7 +82,7 @@
 						</a>
 					</li>
 					<li class="work-item">
-						<a href="news.detail.html">
+						<a href="/project/qarm.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/qarm.jpg" alt=""/>
 							</div>
@@ -90,7 +90,7 @@
 						</a>
 					</li>
 					<li class="work-item">
-						<a href="news.detail.html">
+						<a href="/project/2DDWA.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/plan_control.jpg" alt=""/>
 							</div>
@@ -98,7 +98,7 @@
 						</a>
 					</li>						  
 					<li class="work-item">
-						<a href="news.detail.html">
+						<a href="/project/ADP.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/RL.jpg" alt=""/>
 							</div>
@@ -107,7 +107,7 @@
 						</a>
 					</li>
 					<li class="work-item">
-						<a href="project/muti-robots.html">
+						<a href="/project/muti-robots.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/muti-robots.jpg" alt=""/>
 							</div>
@@ -115,7 +115,7 @@
 						</a>
 					</li>
 					<li class="work-item">
-						<a href="news.detail.html">
+						<a href="/project/ETC.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/switch.jpg" alt=""/>
 							</div>
@@ -123,7 +123,7 @@
 						</a>
 					</li>	
 					<li class="work-item">
-						<a href="news.detail.html">
+						<a href="/project/drop.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/drop.jpg" alt=""/>
 							</div>
@@ -131,7 +131,7 @@
 						</a>
 					</li>
 					<li class="work-item">
-						<a href="news.detail.html">
+						<a href="/project/Muti-UAVs.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/x.jpg" alt=""/>
 							</div>
@@ -139,7 +139,7 @@
 						</a>
 					</li>
 					<li class="work-item">
-						<a href="news.detail.html">
+						<a href="/project/bridge.html">
 							<div class="work-item-pic">
 								<img src="/img/Show pictures/Bridges.jpg" alt=""/>
 							</div>
