--- a/project/drop.html
+++ b/project/drop.html
@@ -57,9 +57,9 @@
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
-				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">Interests</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">MATLAB</a></li>
+				<li><a href="/index.html">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="/achievement.html">Projects</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">Coordinated tracking and landing by UAV and UGV</a></li>
 			</ul>
 		</div>
 		
@@ -72,6 +72,16 @@
 						<span>Release time：2023-03-14</span>
 					</p>
 				</div>
+					<p>Unmanned aerial vehicles (UAVs) and unmanned ground vehicles (UGVs) are two types of robotic technologies that can work together to accomplish a variety of tasks. 
+				  	One such task is coordinated landing, where a UAV and UGV work in tandem to safely guide the UAV down to a landing zone on the ground.</p>
+				
+					<p>The process usually begins with the UAV hovering over the landing zone while the UGV moves into position beneath. The UGV then deploys a platform or net, 
+					which serves as a target for the UAV to land on. 
+					Using sensors and control systems, the UAV adjusts its altitude and angle to approach and align itself with the target. 
+					As it descends, the UGV guides and stabilizes the platform or net, ensuring a smooth and safe landing.</p>
+					
+					<p>Coordinated landing has many potential applications, including package delivery, reconnaissance, and search and rescue missions. By working together, 
+					UAVs and UGVs can increase the precision and safety of their operations, as well as reduce the workload for human operators.</p>
 				<div class="news-detail-content">
 				  	<body>
 					<center>
