--- a/project/drop.html
+++ b/project/drop.html
@@ -67,10 +67,7 @@
 		<div class="news-detail">
 			<div class="wrapper">
 				<div class="news-title">
-					<h2>Learning and perception of MATLAB</h2>
-					<p>
-						<span>Release time：2023-03-14</span>
-					</p>
+					<h2>The landing of the quadrotor on the vehicle platform</h2>
 				</div>
 					<p style="text-align:justify">&ensp;&ensp;&ensp;&ensp;Unmanned aerial vehicles (UAVs) and unmanned ground vehicles (UGVs) are two types of robotic technologies that can work together to accomplish a variety of tasks. 
 				  	One such task is coordinated landing, where a UAV and UGV work in tandem to safely guide the UAV down to a landing zone on the ground.</p>
@@ -91,7 +88,17 @@
               				height="432" ></video>
 					</center>
      					</body>
+			
 					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;1</p>
+					
+					<body>
+					<center>
+        				<video src="/video/Drop_round.mp4" 
+               				controls 
+               				width="768" 
+              				height="432" ></video>
+					</center>
+     					</body>
 					<p style="margin-bottom: 15px;">2</p>
 					<p><img src="img/changcheng.jpg" alt=""/></p>
 					
