--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		</div>
 		
 		<div class="page-banner">
-			<img src="img/beijing1.jpg" alt=""/>
+			<img src="img/pic2.jpg" alt=""/>
 		</div>
 		
 		<!--简介-->
