--- a/interesting.html
+++ b/interesting.html
@@ -51,7 +51,7 @@
 		
 		<!--头部图片-->
 		<div class="page-banner">
-			<img src="img/beijing2.jpg" alt=""/>
+			<img src="img/pic3.jpg" alt=""/>
 		</div>
 		
 		<!--面包屑导航-->
